--- a/preface/css/style.css
+++ b/preface/css/style.css
@@ -476,7 +476,7 @@ span.border.one:after {
 .about-right{
 	    float: left;
 	padding:0;
-	background:url(../images/about-pic.jpg) no-repeat 0px 0px;
+	background:url(../images/教育部次長陳良基.jpg) no-repeat 0px 0px;
 	min-height:580px;
 	background-size: cover;
    -o-background-size: cover;
